fix: map dto to view model
